<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="name">My Nano degree App!</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Scores App</string>
    <string name="app3">Library App</string>
    <string name="app4">Build It Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone : My own app</string>
    <string name="action_settings">Settings</string>

</resources>
